--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -1,4 +1,4 @@
-<div class="page-header" data-parallax="true" style="background-image: url('./assets/img/Landing3.jpg');">
+<div class="page-header" data-parallax="true" style="background-image: url('./assets/img/Landing3O.jpg');">
     <div class="filter"></div>
     <div class="container">
         <div class="motto text-center">
@@ -29,7 +29,7 @@
                 <div class="info">
                     <div class="card card-profile card-plain">
                     <div class="card-avatar">
-                            <img src="./assets/img/geraldo.jpg" alt="...">
+                            <img src="./assets/img/geraldoO.jpg" alt="...">
                     </div>
                 </div>
                     <div class="description">
@@ -42,7 +42,7 @@
                 <div class="info">
                     <div class="card card-profile card-plain">
                         <div class="card-avatar">
-                                <img src="./assets/img/miranha.jpg" alt="...">
+                                <img src="./assets/img/miranhaO.jpg" alt="...">
                         </div>
                     </div>
                     <div class="description">
@@ -55,7 +55,7 @@
                 <div class="info">
                     <div class="card card-profile card-plain">
                         <div class="card-avatar">
-                                <img src="./assets/img/groot.jpg" alt="...">
+                                <img src="./assets/img/grootO.jpg" alt="...">
                         </div>
                     </div>
                     <div class="description">
