Remove texto navbar

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -31,7 +31,7 @@
                 <li class="nav-item" *ngIf="!isDocumentation()">
                     <a class="nav-link" rel="tooltip" title="Entre em contato" data-placement="bottom" href="https://linkwhatsapp" target="_blank">
                         <i class="fa fa-whatsapp"></i>
-                        <p class="d-lg-none">Whatsapp (55) 994204204</p>
+                        <p class="d-lg-none">Whatsapp</p>
                     </a>
                 </li>
                 <li class="nav-item" *ngIf="!isDocumentation()">
