--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -1,4 +1,4 @@
-<div class="page-header" data-parallax="true" style="background-image: url('./assets/img/Landing3O.jpg');">
+<div [defaultImage]="defaultImage" [lazyLoad]="image" class="page-header" data-parallax="true" style="background-image: url('./assets/img/Landing3O.jpg');">
     <div class="filter"></div>
     <div class="container">
         <div class="motto text-center">
@@ -77,7 +77,7 @@
             <div class="col-md-4">
                 <div class="card card-profile card-plain">
                     <div class="text-center" routerLinkActive="active">
-                            <img src="./assets/img/trabalho1.jpg" alt="Rounded Image" class="img-rounded img-responsive" style="width: 100%">
+                            <img [defaultImage]="defaultImage" [lazyLoad]="images" [useSrcset]="true" src="./assets/img/trabalho1.jpg" alt="Rounded Image" class="img-rounded img-responsive" style="width: 100%">
                     </div>
                     <div class="card-block">
                             <div class="author">
@@ -96,7 +96,7 @@
             <div class="col-md-4">
                 <div class="card card-profile card-plain">
                     <div class="text-center" routerLinkActive="active">
-                            <img src="./assets/img/trabalho2.jpg" alt="Rounded Image" class="img-rounded img-responsive" style="width: 100%">
+                            <img [defaultImage]="defaultImage" [lazyLoad]="images" [useSrcset]="true" src="./assets/img/trabalho2.jpg" alt="Rounded Image" class="img-rounded img-responsive" style="width: 100%">
                     </div>
                     <div class="card-block">
                             <div class="author">
@@ -115,7 +115,7 @@
             <div class="col-md-4">
                 <div class="card card-profile card-plain">
                     <div class="text-center" routerLinkActive="active">
-                            <img src="./assets/img/trabalho3.jpg" alt="Rounded Image" class="img-rounded img-responsive" style="width: 100%">
+                            <img [defaultImage]="defaultImage" [lazyLoad]="images" [useSrcset]="true" src="./assets/img/trabalho3.jpg" alt="Rounded Image" class="img-rounded img-responsive" style="width: 100%">
                     </div>
                     <div class="card-block">
                             <div class="author">
