--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -6,12 +6,12 @@
             <h3>Tire as suas ideias do papel</h3>
             <h3>Enviamos para todo BR</h3>
             <br />
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="btn btn-outline-neutral btn-round">Encomende a sua peça</a>
-            <button type="button" class="btn btn-outline-neutral btn-round">Nossos Trabalhos</button>
+            <a href="#middle" class="btn btn-outline-neutral btn-round">Encomende a sua peça</a>
+            <a href="#trabalhos"><button type="button" class="btn btn-outline-neutral btn-round">Nossos Trabalhos</button> </a>
         </div>
     </div>
 </div>
-<div class="main">
+<div id="middle" class="main">
     <div class="section text-center">
     <div class="container">
         <div class="row">
@@ -20,7 +20,7 @@
                 <h5 class="description">Imprimimos em 3d seus projetos com impressoras de alta qualidade e diversos materiais.
                     Tire agora o seu projeto do papel por um preço acessível.</h5>
                 <br>
-                <a href="#paper-kit" class="btn btn-danger btn-round">Solicitar Orçamento</a>
+                <a href="#bottom" class="btn btn-danger btn-round">Solicitar Orçamento</a>
             </div>
         </div>
         <br/><br/>
@@ -70,7 +70,7 @@
     </div>
 </div>
 
-<div class="section section-dark text-center">
+<div id="trabalhos" class="section section-dark text-center">
     <div class="container">
         <h2 class="title">Conheça nossos trabalhos</h2>
         <div class="row">
@@ -134,7 +134,7 @@
     </div>
 </div>
 
-    <div class="section landing-section">
+    <div id="bottom" class="section landing-section">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 mr-auto ml-auto">
