--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -6,21 +6,21 @@
             <h3>Tire as suas ideias do papel</h3>
             <h3>Enviamos para todo BR</h3>
             <br />
-            <a href="#middle" class="btn btn-outline-neutral btn-round">Encomende a sua peça</a>
-            <a href="#trabalhos"><button type="button" class="btn btn-outline-neutral btn-round">Nossos Trabalhos</button> </a>
+            <a class="btn btn-outline-neutral btn-round">Encomende a sua peça</a>
+            <a class="btn btn-outline-neutral btn-round">Nossos Trabalhos</a>
         </div>
     </div>
 </div>
-<div id="middle" class="main">
+<div class="main">
     <div class="section text-center">
-    <div class="container">
+    <div id="middle" class="container">
         <div class="row">
             <div class="col-md-8 mr-auto ml-auto">
                 <h2 class="title">Conheça nossos serviços</h2>
                 <h5 class="description">Imprimimos em 3d seus projetos com impressoras de alta qualidade e diversos materiais.
                     Tire agora o seu projeto do papel por um preço acessível.</h5>
                 <br>
-                <a href="#bottom" class="btn btn-danger btn-round">Solicitar Orçamento</a>
+                <a class="btn btn-danger btn-round">Solicitar Orçamento</a>
             </div>
         </div>
         <br/><br/>
@@ -70,8 +70,8 @@
     </div>
 </div>
 
-<div id="trabalhos" class="section section-dark text-center">
-    <div class="container">
+<div class="section section-dark text-center">
+    <div id="trabalhos" class="container">
         <h2 class="title">Conheça nossos trabalhos</h2>
         <div class="row">
             <div class="col-md-4">
