--- a/src/app/pages/productsList/productsList.component.html
+++ b/src/app/pages/productsList/productsList.component.html
@@ -24,7 +24,7 @@
                       <h3>Sliders</h3>
                   </div>
                   <br>
-                     <nouislider [min]="0" [max]="20" [step]="0.5"></nouislider>
+                     <!-- <nouislider [min]="0" [max]="20" [step]="0.5"></nouislider> -->
               </div>
                          
                      
