--- a/src/app/pages/productsList/productsList.component.html
+++ b/src/app/pages/productsList/productsList.component.html
@@ -24,7 +24,7 @@
                       <h3>Sliders</h3>
                   </div>
                   <br>
-                     <!-- <nouislider [min]="0" [max]="20" [step]="0.5"></nouislider> -->
+                  <nouislider class="slider slider-info" [connect]="true" [min]="0" [max]="100" [step]="1" [(ngModel)]="doubleSlider" [tooltips]="false"></nouislider>
               </div>
                          
                      
