--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -1,4 +1,4 @@
-<div [attr.defaultImage]="defaultImage" [attr.lazyLoad]="image" class="page-header" data-parallax="true" style="background-image: url('./assets/img/Landing3O.jpg');">
+<div [defaultImage]="defaultImage" [lazyLoad]="image" class="page-header" data-parallax="true" style="background-image: url('./assets/img/Landing3O.jpg');">
     <div class="filter"></div>
     <div class="container">
         <div class="motto text-center">
@@ -151,7 +151,7 @@
                                 <div class="input-group-prepend">
                                   <span class="input-group-text"><i class="nc-icon nc-single-02"></i></span>
                                 </div>
-                                <input type="text" class="form-control" placeholder="Name" (focus)="focus=true" (blur)="focus=false" >
+                                <input type="text" class="form-control" placeholder="Seu nome" (focus)="focus=true" (blur)="focus=false" >
                             </div>
                         </div>
                         <div class="col-md-6">
