Tela detalhe produto

--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -74,7 +74,7 @@
     <div id="trabalhos" class="container">
         <h2 class="title">Conheça nossos trabalhos</h2>
         <div class="card-footer text-center">
-            <a heref="https://imobpoc.online/trabalhos"><button type="button" class="btn btn-outline-neutral btn-round btn-sm">Veja todos os trabalhos</button></a>
+            <a [routerLink]="['/trabalhos']"><button type="button" class="btn btn-outline-neutral btn-round btn-sm">Veja todos os trabalhos</button></a>
         </div>
         <div class="row">
             <div class="col-md-4">
