--- a/src/app/pages/productsList/productsList.component.html
+++ b/src/app/pages/productsList/productsList.component.html
@@ -35,7 +35,7 @@
                      <div class="col-md-4 col-sm-4">
                         <div class="card card-product card-plain">
                            <div class="card-image">
-                              <a href="javascript:void(0)"><img alt="Rounded Image" class="img-rounded img-responsive" src="./assets/img/trabalho1.jpg"></a>
+                              <a [routerLink]="['/trabalho', 1]"><img alt="Rounded Image" class="img-rounded img-responsive" src="./assets/img/trabalho1.jpg"></a>
                               <div class="card-body">
                                  <div class="card-description">
                                     <h5 class="card-title">Baby Groot</h5>
