Tela de criar trabalho e ajustes

--- a/src/app/pages/productDetail/productDetail.component.html
+++ b/src/app/pages/productDetail/productDetail.component.html
@@ -11,19 +11,16 @@
             <ng-template ngbSlide>
                 <img class="img-responsive" src="./assets/img/trabalho1.jpg" alt="Random first slide">
                 <div class="carousel-caption">
-                    <p>Somewhere</p>
                 </div>
             </ng-template>
             <ng-template ngbSlide>
                 <img class="img-responsive" src="./assets/img/trabalho1.jpg" alt="Random second slide">
                 <div class="carousel-caption">
-                    <p>Somewhere else</p>
                 </div>
             </ng-template>
             <ng-template ngbSlide>
                 <img class="img-responsive" src="./assets/img/trabalho1.jpg" alt="Random third slide">
                 <div class="carousel-caption"> 
-                    <p>Here it is</p>
                 </div>
             </ng-template>
         </ngb-carousel>
@@ -31,6 +28,7 @@
          <div class="col-md-6 col-sm-6">
            <h2>Baby Grooth</h2>
            <h4 class="price"><strong>R$ 30</strong></h4>
+           <h6 class="m-1">7 X 7 cm</h6>
            <hr>
            <p>Já pensou em um Baby Groot todo charmoso e fofinho em sua casa. Encomende logo o seu.</p>
            <span class="label label-default shipping mt-3 mb-3">Entrega em todo o Brasil</span>
