Tela de edição produto

--- a/src/app/pages/productsList/productsList.component.html
+++ b/src/app/pages/productsList/productsList.component.html
@@ -45,12 +45,14 @@
                                  </div>
                               </div>
                            </div>
+                           <button type="button" class="btn btn-outline-default btn-round btn-sm col-md-4 ml-auto mr-auto"
+                           [routerLink]="['/atualizar-trabalho', 1]">Editar</button>
                         </div>
                      </div>
                      <div class="col-md-4 col-sm-4">
                         <div class="card card-product card-plain">
                            <div class="card-image">
-                              <a href="javascript:void(0)"><img alt="Rounded Image" class="img-rounded img-responsive" src="./assets/img/trabalho1.jpg"></a>
+                              <a [routerLink]="['/trabalho', 1]"><img alt="Rounded Image" class="img-rounded img-responsive" src="./assets/img/trabalho1.jpg"></a>
                               <div class="card-body">
                                  <div class="card-description">
                                     <h5 class="card-title">Baby Groot</h5>
@@ -60,12 +62,14 @@
                                  </div>
                               </div>
                            </div>
+                           <button type="button" class="btn btn-outline-default btn-round btn-sm col-md-4 ml-auto mr-auto"
+                           [routerLink]="['/atualizar-trabalho', 1]">Editar</button>
                         </div>
                      </div>
                      <div class="col-md-4 col-sm-4">
                         <div class="card card-product card-plain">
                            <div class="card-image">
-                              <a href="javascript:void(0)"><img alt="Rounded Image" class="img-rounded img-responsive" src="./assets/img/trabalho1.jpg"></a>
+                              <a [routerLink]="['/trabalho', 1]"><img alt="Rounded Image" class="img-rounded img-responsive" src="./assets/img/trabalho1.jpg"></a>
                               <div class="card-body">
                                  <div class="card-description">
                                     <h5 class="card-title">Baby Groot</h5>
@@ -75,12 +79,14 @@
                                  </div>
                               </div>
                            </div>
+                           <button type="button" class="btn btn-outline-default btn-round btn-sm col-md-4 ml-auto mr-auto"
+                           [routerLink]="['/atualizar-trabalho', 1]">Editar</button>
                         </div>
                      </div>
                      <div class="col-md-4 col-sm-4">
                         <div class="card card-product card-plain">
                            <div class="card-image">
-                              <a href="javascript:void(0)"><img alt="Rounded Image" class="img-rounded img-responsive" src="./assets/img/trabalho1.jpg"></a>
+                              <a [routerLink]="['/trabalho', 1]"><img alt="Rounded Image" class="img-rounded img-responsive" src="./assets/img/trabalho1.jpg"></a>
                               <div class="card-body">
                                  <div class="card-description">
                                     <h5 class="card-title">Baby Groot</h5>
@@ -90,12 +96,14 @@
                                  </div>
                               </div>
                            </div>
+                           <button type="button" class="btn btn-outline-default btn-round btn-sm col-md-4 ml-auto mr-auto"
+                           [routerLink]="['/atualizar-trabalho', 1]">Editar</button>
                         </div>
                      </div>
                      <div class="col-md-4 col-sm-4">
                         <div class="card card-product card-plain">
                            <div class="card-image">
-                              <a href="javascript:void(0)"><img alt="Rounded Image" class="img-rounded img-responsive" src="./assets/img/trabalho1.jpg"></a>
+                              <a [routerLink]="['/trabalho', 1]"><img alt="Rounded Image" class="img-rounded img-responsive" src="./assets/img/trabalho1.jpg"></a>
                               <div class="card-body">
                                  <div class="card-description">
                                     <h5 class="card-title">Baby Groot</h5>
@@ -105,12 +113,14 @@
                                  </div>
                               </div>
                            </div>
+                           <button type="button" class="btn btn-outline-default btn-round btn-sm col-md-4 ml-auto mr-auto"
+                           [routerLink]="['/atualizar-trabalho', 1]">Editar</button>
                         </div>
                      </div>
                      <div class="col-md-4 col-sm-4">
                         <div class="card card-product card-plain">
                            <div class="card-image">
-                              <a href="javascript:void(0)"><img alt="Rounded Image" class="img-rounded img-responsive" src="./assets/img/trabalho1.jpg"></a>
+                              <a [routerLink]="['/trabalho', 1]"><img alt="Rounded Image" class="img-rounded img-responsive" src="./assets/img/trabalho1.jpg"></a>
                               <div class="card-body">
                                  <div class="card-description">
                                     <h5 class="card-title">Baby Groot</h5>
@@ -120,6 +130,8 @@
                                  </div>
                               </div>
                            </div>
+                           <button type="button" class="btn btn-outline-default btn-round btn-sm col-md-4 ml-auto mr-auto"
+                           [routerLink]="['/atualizar-trabalho', 1]">Editar</button>
                         </div>
                      </div>
              </div>
